Bug 635405 - Zooming a windowless plugin frame can cause it to "bleed" outside its bounds.  r+a=roc